--- a/mattermost/Dockerfile
+++ b/mattermost/Dockerfile
@@ -1,9 +1,9 @@
 FROM ubuntu:21.04
 
-ARG MM_VER=5.35.0
+ARG MM_VER=5.35.1
 ARG PUID=2000
 ARG PGID=2000
-ARG DB_HOST=mm-mysql
+ARG DB_HOST=127.0.0.1
 ARG DB_PORT=3306
 
 RUN apt-get -y update
