--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
             context: mysql/
             dockerfile: Dockerfile
             args:
-                - ROOT_PASSWORD=
+                - ROOT_PASSWORD=""
                 - DATABASE=mattermost
                 - USER=mmuser
-                - PASSWORD=
+                - PASSWORD=""
         command: --default-authentication-plugin=mysql_native_password
         environment:
             TZ: Asia/Tokyo
@@ -30,7 +30,11 @@ services:
             dockerfile: Dockerfile
             args:
                 - MM_VER=5.35.1
-                - DB_HOST=mm-mysql
+                - DB_HOST=""
+                - DB_PORT=""
+                - DATABASE=""
+                - DB_USER=""
+                - DB_PASSWORD=""
         depends_on:
             - mm-mysql
         environment:
